--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -129,6 +129,8 @@
             <button class="update-end-time ">End</button>
             <button class="save-btn">Save</button>
             <button class="save-btn-for-end-time">Save</button>
+            <button type="text" class="opt-cancel-btn">Cancel</button>
+
           </td>
             
         </tr>
