--- a/views/pages/holiday.ejs
+++ b/views/pages/holiday.ejs
@@ -198,6 +198,7 @@
             <button type="text" class="action-btn">Action</button>
             <button type="text" class="update-btn">Update</button>
             <button type="text" class="save-btn">Save</button>
+            <button type="button" class="opt-cancel-btn">Cancel</button>
 
             <a class="delete-data">
               <button type="text" class="delete-btn">Delete</button>
