--- a/views/pages/option-values.ejs
+++ b/views/pages/option-values.ejs
@@ -1,7 +1,5 @@
 <%- include("../partials/header"); -%>
-<style>
-
-</style>
+<style></style>
 
 <div id="project">
   <div class="text-head">
@@ -36,9 +34,10 @@
             value="<%= op.id %>"
           />
         </td>
-        <td>
+        <td class="btn-group">
           <button type="text" class="opt-val-change-btn">Change</button>
           <button type="submit" class="opt-val-save-btn">save</button>
+          <button type="text" class="opt-cancel-btn">Cancel</button>
         </td>
       </tr>
       <% }) %>
