--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -1,98 +1,9 @@
 <%- include("../partials/header"); -%>
-
-<style>
-  .leaveday-table input[type="text"] {
-    outline: none;
-    border-radius: 10px;
-    border: none;
-    padding: 6px;
-    font-size: 14px;
-    font-weight: 500;
-    width: 90%;
-  }
-
-  .leaveday-table th,
-  .leaveday-table td {
-    width: 158px !important;
-  }
-  .leaveday-table a {
-    text-decoration: none;
-  }
-  .action-btn,
-  .update-btn,
-  .delete-btn,
-  .save-btn {
-    background-color: #103047;
-    border-radius: 10px;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    font-weight: 500;
-    cursor: pointer;
-    width: 100%;
-  }
-  .save-btn {
-    background-color: rgb(17, 221, 17);
-  }
-  .delete-btn {
-    background-color: rgb(255, 0, 0);
-  }
-  .action-btn,
-  .save-btn {
-    width: 50%;
-  }
-  .update-btn,
-  .delete-btn,
-  .save-btn {
-    display: none;
-  }
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    width: 150px;
-  }
-
-  .set-styles {
-    border-bottom: 3px solid #ccc;
-    gap: 5px;
-  }
-
-  /* style for the date range holiday  same css  */
-  .date-range-input {
-    display: flex;
-    justify-content: space-between;
-    margin: 30px 40px;
-  }
-  .date-range-input-container {
-    background: #f3f3f3;
-    border-radius: 8px;
-    padding: 5px 10px;
-    height: 45px;
-  }
-
-  .date-input {
-    background: #f3f3f3;
-    width: 150px;
-    padding: 6px;
-    font-size: 16px;
-    font-weight: 400;
-    color: #5e5e5e;
-    border: none;
-    outline: none;
-    /* border: 1px solid #EAEEF4;
-  border-radius: 12px; */
-    text-align: left;
-  }
-  .date-input:focus,
-  input[type="data"]:focus {
-    border: none;
-    outline: none !important;
-  }
-</style>
-
+  <style>
+    .update-btn {
+  display: none;
+}
+  </style>
 <div id="users">
   <div class="text-head">
     <div class="text-title">Leave days</div>
