--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="/icons/x-icon.jpg" type="image/x-icon"> 
+    <link rel="shortcut icon" href="<%=baseUrl%>/icons/x-icon.jpg" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oclock UI</title>
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
