--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" href="<%=baseUrl%>/icons/x-icon.jpg" type="image/x-icon"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="<%=baseUrl%>/style.css">
   <title><%= title%></title>
 </head>
 <body>
