--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -36,7 +36,7 @@
             <img src="<%= user.avatar%>" />
             <%} else{%>
             <img
-              src="/uploads/avatars/<%=user.avatar != null ?  user.avatar : 'demo-avatar.png' %>"
+              src="<%=baseUrl%>/uploads/avatars/<%=user.avatar != null ?  user.avatar : 'demo-avatar.png' %>"
             />
             <% } %>
           </td>
