--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="<%=baseUrl%>/icons/x-icon.jpg" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oclock UI</title>
+    <title><%= title %> </title>
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/profile.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/table.css"/>
