--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -37,9 +37,13 @@
   font-weight: 700;
   padding: 0px 0 0 40px;
   color: var(--deep);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 .time-meridiem {
-  font-size: 20px;
+  font-size: 18px;
+  margin-left: 8px;
 }
 .current-date {
   font-size: 14px;
