--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="login">
-      <form action="/" method="post">
+      <form action="/login" method="post">
       <div class="login-box">
         <div class="login-logo">
           <%- include("../partials/icons/login-logo.ejs"); -%>
