--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 </main>
 <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
+<script src="<%=baseUrl%>/js/timePicker.js"></script>
 <script>
      const startDatePicker = MCDatepicker.create({
         el: "#startPicker",
@@ -9,7 +10,7 @@
         el: "#endPicker",
         dateFormat: "DD-MM-YYYY",
       });
-;
+
 
 </script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
