--- a/public/report.css
+++ b/public/report.css
@@ -231,6 +231,11 @@ font-weight: 500;
 }
 
 .an-employee-report{
+  height: 350;
+  scroll-behavior: smooth;
+  /* overflow-y: scroll; */
+  overflow-y: hidden;
+  overflow: auto;
   margin: 20px 0;
   padding: 20px;
   border-radius: 12px;
@@ -238,7 +243,24 @@ font-weight: 500;
   text-transform: capitalize;
   
 }
+.an-employee-report::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+  background-color: #f5f5f5;
+}
 
+.an-employee-report::-webkit-scrollbar {
+  width: 6px;
+}
+.an-employee-report::-webkit-scrollbar-button {
+  height: 20px;
+}
+
+.an-employee-report::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--deep);
+}
 
 .an-employee-report tr{
   text-align: left;
@@ -258,7 +280,7 @@ color: var(--deep2);
 }
 
 .an-employee-report thead tr th{
-padding-bottom: 25px;
+padding-bottom: 5px;
 }
 .an-employee-report tbody tr td {
 padding-top: 20px;
@@ -304,6 +326,9 @@ border: none;
 display: flex;
 justify-content: space-between;
 margin-top: 20px;
+}
+.table{
+  min-width: 920px;
 }
 #an-user-report span, table thead span{
 font-size: 10px;
