add time picker ui

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/css/vendors/toastify.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/dist/mc-calendar.min.css"/>
-
+    <link rel="stylesheet" href="<%=baseUrl%>/dist/time-picker.css"/>
   </head>
   <body>
     <%- include("./nav.ejs"); -%>
