Update bottom nav

--- a/views/partials/bottom-nav.ejs
+++ b/views/partials/bottom-nav.ejs
@@ -13,6 +13,7 @@
             Dashboard
           </a>
         </li>
+        <%if(profile.user_role==='admin'){ %>
         <li class="nav-item">
           <a href="/users" class="nav-link">
             <span class="nav-icon">
@@ -21,6 +22,7 @@
             >Users
           </a>
         </li>
+        <% } %> 
         <li class="nav-item">
           <a href="/reports" class="nav-link">
             <span class="nav-icon">
