--- a/public/report.css
+++ b/public/report.css
@@ -75,7 +75,7 @@
 }
 .box {
   width: 251px;
-  height: 150px;
+  height: 170px;
   padding: 9px;
   border: 1px solid #e6e6e6;
   border-radius: 15px;
@@ -198,76 +198,72 @@
   justify-content: space-between;
   margin-top: 20px;
 }
-.date-range-input-container{
-background: #f3f3f3;
-border-radius: 8px;
-padding: 5px 10px;
-height: 45px;
+.date-range-input-container {
+  background: #f3f3f3;
+  border-radius: 8px;
+  padding: 5px 10px;
+  height: 45px;
 }
-.date-input{
-background: #f3f3f3;
-width: 150px;
-padding:  6px;
-font-size: 16px;
-font-weight: 400;
-color: #5E5E5E;
-border: none;
-outline: none;
-/* border: 1px solid #EAEEF4;
+.date-input {
+  background: #f3f3f3;
+  width: 150px;
+  padding: 6px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #5e5e5e;
+  border: none;
+  outline: none;
+  /* border: 1px solid #EAEEF4;
 border-radius: 12px; */
-text-align: left;
+  text-align: left;
 }
-.date-input:focus, input[type="data"]:focus{
-border: none;
-outline: none !important;
+.date-input:focus,
+input[type="data"]:focus {
+  border: none;
+  outline: none !important;
+}
+.report-title-container {
+  margin-top: 8px;
+}
+.report-title-container p {
+  font-size: 14px;
+  font-weight: 500;
+}
 
-}
-.report-title-container{
-margin-top: 8px;
-}
-.report-title-container p{
-font-size: 14px;
-font-weight: 500;
-}
-
-.an-employee-report{
+.an-employee-report {
   margin: 20px 0;
   padding: 20px;
   border-radius: 12px;
   border: 1px solid #818181;
   text-transform: capitalize;
-  
 }
 
-
-.an-employee-report tr{
+.an-employee-report tr {
   text-align: left;
 }
 .an-employee-report thead {
-padding: 40px;
-font-size: 16px;
-font-weight: 700;
-color: var(--deep-gray);
+  padding: 40px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--deep-gray);
 }
-
 
 .an-employee-report tbody {
-font-size: 14px;
-font-weight: 500;
-color: var(--deep2);
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--deep2);
 }
 
-.an-employee-report thead tr th{
-padding-bottom: 25px;
+.an-employee-report thead tr th {
+  padding-bottom: 25px;
 }
 .an-employee-report tbody tr td {
-padding-top: 20px;
+  padding-top: 20px;
 }
 .an-employee-report th,
 .an-employee-report td {
-width: 300px;
+  width: 300px;
 }
-
 
 .bg-red-200 {
   color: #f81919;
@@ -279,32 +275,30 @@ width: 300px;
   color: tomato;
 }
 #reports input:focus {
-outline: none !important;
-border: none;
-
-
+  outline: none !important;
+  border: none;
 }
 
-.filtered-report{
-background: #f3f3f3;
-border-radius: 22px;
-padding: 15px 30px;
-display: flex;
-justify-content: space-between;
-margin-top: 20px;
-display: none;
+.filtered-report {
+  background: #f3f3f3;
+  border-radius: 22px;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  display: none;
+}
+.filtered-report .box {
+  background-color: #f3f3f3;
+  border: none;
+}
 
+.test {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
-.filtered-report .box{
-background-color: #f3f3f3;
-border: none;
-}
-
-.test{
-display: flex;
-justify-content: space-between;
-margin-top: 20px;
-}
-#an-user-report span, table thead span{
-font-size: 10px;
+#an-user-report span,
+table thead span {
+  font-size: 10px;
 }
