--- a/views/pages/option-values.ejs
+++ b/views/pages/option-values.ejs
@@ -20,6 +20,7 @@
         <td><%= op.option_title %></td>
         <td <%= op.option_title ==	'in-time'  ? " class=time-picker" : op.option_title ==	'out-time'? " class=time-picker":''  %> >
           <input
+          id="<%= op.option_title=='off-day' ?'offDayAddBtn':'' %>" 
             type="text"
             class="option-value  <%= op.option_title ==	'in-time'?'timepicker-ui-input' :op.option_title ==	'in-time'?'timepicker-ui-input':''  %> "
             name="optionValue"
@@ -35,7 +36,7 @@
           />
         </td>
         <td class="btn-group">
-          <button type="text" class="opt-val-change-btn">Change</button>
+            <button type="text" class="opt-val-change-btn">Change</button>
           <button type="submit" class="opt-val-save-btn">save</button>
           <button type="text" class="opt-cancel-btn">Cancel</button>
         </td>
@@ -57,6 +58,7 @@
       </button>
     </div>
     <%- include("../partials/add-leave-type"); -%>
+    <%- include("../partials/off-day-select-modal"); -%>
   </div>
   <table class="project-table">
     <thead>
