--- a/views/partials/add-request-leave-modal.ejs
+++ b/views/partials/add-request-leave-modal.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-content">
       <div class="container">
-        <form action="/add-leaveday" method="post">
+        <form action="/options/send-request-leave" method="post">
           <label for="name">
             <div class="">
               <select  name="typeId">
