--- a/public/style.css
+++ b/public/style.css
@@ -226,6 +226,30 @@ main::-webkit-scrollbar-thumb {
   margin-left: 8px;
   cursor: pointer;
 }
+.primary-btn{
+  background-color: #0b42cc;
+  border-radius: 10px;
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  outline: none;
+  font-size: 12px;
+  font-weight: 500;
+  cursor: pointer;
+  width: 100%;
+}
+.accept-btn{
+  background-color:hsl(119, 80%, 50%);
+}
+.accept-btn:hover{
+  background-color:hsl(119, 80%, 45%);
+}
+.reject-btn{
+  background-color: hsl(0, 100%, 50%);
+}
+.reject-btn:hover{
+  background-color: hsl(0, 100%, 45%) ;
+}
 .mail-sent {
   padding: 10px;
   line-height: 24px;
