--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="/icons/x-icon.jpgnp" type="image/png">
+    <link rel="shortcut icon" href="/icons/x-icon.jpg" type="image/png">
         
     <!--====== Animate CSS ======-->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -118,7 +118,7 @@
                 </div> <!-- row -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="header-hero-image text-center wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s"><a href="https://www.youtube.com/watch?v=uOCgF6N9OVU" class="video-popup"><img src="assets/images/header-hero.png" alt="hero"></a>
+                        <div class="header-hero-image text-center wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s"><a href="https://vimeo.com/713283527" class="video-popup"><img src="assets/images/header-hero.png" alt="hero"></a>
                         </div> <!-- header hero image -->
                     </div>
                 </div> <!-- row -->
@@ -322,7 +322,7 @@
                                 <img src="assets/images/profile.png" alt="video">
                             </div>
                             <div class="video-icon">
-                                <a href="https://www.youtube.com/watch?v=uOCgF6N9OVU" class="video-popup"><i class="lni-play"></i></a>
+                                <a href="https://vimeo.com/713283527" class="video-popup"><i class="lni-play"></i></a>
                             </div>
                         </div> <!-- video wrapper -->
                     </div> <!-- video content -->
